# masteroppgave

./: CMakeLists.txt  README.md  april.launch  aruco.launch  blackfly.yaml  package.xml  params.yaml
launch/: april.launch  aruco.launch
msg/: distribution.msg  myAprilTagDetectionArray.msg
src/: april.cpp  aruco.cpp  classes.cpp  classes.h  funcs.cpp  funcs.h  funcs_template.tcc  functions.cpp  functions.h  lie.cpp  lie.h  rectify.cpp  structs.h  sub.py
src/iekf/: iekf.py
src/py/: calibrate.py  estimate_state.py  funcs_plotting.py  nelderMead.py  parse.py  parse_estimate.py  plotting.py  plotting_consistency.py  regression.py  saveImgs.py  trajectory_forwarder.py  trajectory_service.py
src/py/parse_data/: NEES1_baseline.npy  NEES1_bigR.npy  NEES1_full.npy  NEES2_baseline.npy  NEES2_bigR.npy  NEES2_full.npy  NEES3_baseline.npy  NEES3_bigR.npy  NEES3_full.npy  NIS1_baseline.npy  NIS1_bigR.npy  NIS1_full.npy  NIS2_baseline.npy  NIS2_bigR.npy  NIS2_full.npy  NIS3_baseline.npy  NIS3_bigR.npy  NIS3_full.npy  x1_gt.npy  x2_gt.npy  x3_gt.npy  x_hat1_baseline.npy  x_hat1_full.npy  x_hat2_baseline.npy  x_hat2_full.npy  x_hat3_bigR.npy  x_hat3_full.npy  z1.npy  z2.npy  z3.npy
srv/: estimate.srv  trajectory.srv
